--- a/index.html
+++ b/index.html
@@ -14,60 +14,80 @@
 <body>
 	<script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
 	<script src="js/bootstrap.js"></script>
-	<script src="openpgp.min.js" type="text/javascript"></script>
 
 	<!-- Start of page -->
-	<div class="box1">
-		<div class="hatch1">
-			<h1>Is Your Startup Ready to Hatch?</h1>
+	<!--Navbar-->
+	    <div class="navbar navbar-default navbar-fixed-top" role="navigation">
+	      <div class="container">
+	        <div class="navbar-header">
+	          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+	            <span class="sr-only">Toggle navigation</span>
+	            <span class="icon-bar"></span>
+	            <span class="icon-bar"></span>
+	            <span class="icon-bar"></span>
+	          </button>
+	          <a class="navbar-brand" href="#">Project name</a>
+	        </div>
+	        <div class="navbar-collapse collapse">
+	          <form class="navbar-form navbar-right" role="form">
+	                <div class="form-group">
+	                  <input type="text" placeholder="Email" class="form-control">
+	                </div>
+	                <div class="form-group">
+	                  <input type="password" placeholder="Password" class="form-control">
+	                </div>
+	                <a class="btn btn-success" href="profile.html" role="button">Sign In</a>
+	            </form>
+	        </div><!--/.navbar-collapse -->
+	      </div>
+	    </div> 
+
+	<div class="container-fluid"> 
+		<div class="row" id="one">
+			<div class="col-md-12">
+				<h1>Is Your Startup Ready to Hatch?</h1>
+				<button type="submit" class="btn btn-default">Sign Up</button>
+			</div>
+
+			<div class="birds">
+				<img class="col-md-3" src="images/egg3.png" alt=""/>
+				<img class="col-md-3" src="images/egg6.png" alt=""/>
+				<img class="col-md-3" src="images/bird34.png" alt=""/>
+				<img class="col-md-3" src="images/black289.png" alt=""/>
+			</div>
+
+			<div class="frontlefttext">
+				<p>Sign up for FREE tools and resources<br />
+				to help start your own company</p>
+			</div>
+
+			<div class="frontrighttext">
+				<p>We can help guide you through the<br />
+				process of launching a startup</p>
+			</div>
 		</div>
 
-		<div>
-			<button type="submit" class="btn btn-default">Sign Up</button>
+		<div class="row">
+			<ul class="col-md-12">
+				<li><img src="images/profileimg.png" alt="" /></li>
+				<li><img src="images/testimg.png" alt="" /></li>
+				<li><img src="images/statsimg.png" alt="" /></li>
+			</ul>
 		</div>
 
-		<ul class="birds">
-			<li><img src="images/egg3.png" alt="" height= /></li>
-			<li><img src="images/egg6.png" alt="" /></li>
-			<li><img src="images/bird34.png" alt="" /></li>
-			<li><img src="images/black289.png" alt="" /></li>
-		</ul>
-
-
-
-
-
-		<div class="frontlefttext">
-			<p>Sign up for FREE tools and resources<br />
-			to help start your own company</p>
+		<div class="row">
+			<h1>An Interactive Guided Process Providing the 
+				Resources to Help Launch Your Startup</h1>
+			<div class="demo">
+				<img src="images/demo.png" alt="" />
+			</div>
 		</div>
 
-		<div class="frontrighttext">
-			<p>We can help guide you through the<br />
-			process of launching a startup</p>
-		</div>
-	</div>
-
-	<div class="box2">
-		<ul class="features">
-			<li><img src="images/profileimg.png" alt="" /></li>
-			<li><img src="images/testimg.png" alt="" /></li>
-			<li><img src="images/statsimg.png" alt="" /></li>
-		</ul>
-	</div>
-
-	<div class="box3">
-		<h1>An Interactive Guided Process Providing the 
-			Resources to Help Launch Your Startup</h1>
-		<div class="demo">
-			<img src="images/demo.png" alt="" />
-		</div>
-	</div>
-
-	<div class="box4">
-		<h1>Share Your Vision</h1>
-		<div>
-			<button type="submit" class="btn btn-default">Learn More</button>
+		<div class="row">
+			<h1>Share Your Vision</h1>
+			<div>
+				<button type="submit" class="btn btn-default">Learn More</button>
+			</div>
 		</div>
 	</div>
 
