--- a/index.html
+++ b/index.html
@@ -147,8 +147,7 @@
         </div>
 
 		<div class="row" id="three">
-			<img class="col-xs-12 col-sm-6 img-responsive center-block"src="images/threetext.png" alt="" />
-			<img class="col-xs-12 col-sm-6 img-responsive center-block"src="images/demo.png" alt="" />
+			<img class="col-xs-12 img-responsive center-block"src="images/screenshots.png" alt=""/>
 		</div>
 
 		<div class="row" id="four">
